--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "angular-bootstrap": "~0.13.3",
     "angular-filter": "~0.5.5",
+    "angular-loading-bar": "~0.8.0",
+    "angular-moment": "~0.10.2",
     "angular-route": "~1.4.4",
     "angular-tablesort": "~1.1.0",
     "bootstrap": "~3.3.4",
+    "json-formatter": "~0.4.0",
     "underscore": "~1.8.3"
   }
 }
