--- a/public/Makefile
+++ b/public/Makefile
@@ -1,3 +1,5 @@
+COFFEE=../node_modules/coffee-script/bin/coffee
+JADE=../node_modules/jade/bin/jade.js
 TARGETS=$(patsubst %.coffee,%.js,$(shell find . -name \*.coffee))
 TARGETS+=$(patsubst %.jade,%.html,$(shell find . -name \*.jade))
 
@@ -7,8 +9,8 @@ clean:
 	rm -rf $(TARGETS)
 
 %.html: %.jade
-	jade --pretty $<
+	$(JADE) --pretty $<
 
 %.js: %.coffee
-	coffee -c $<
+	$(COFFEE) coffee -c $<
 
