--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "koa-body": "^1.3.0",
     "koa-jade": "^2.0.0",
     "koa-logger": "^1.3.0",
+    "koa-mount": "^1.3.0",
+    "koa-pixie-proxy": "^1.0.7",
     "koa-router": "^5.2.1",
     "koa-static": "^1.4.9",
     "merge": "^1.2.0",
