update nginx config

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -7,6 +7,10 @@
         include proxy_params;
         proxy_pass http://172.16.0.16;
     }
+    location /grafana {
+        include proxy_params;
+        proxy_pass http://172.16.5.25:8083/;
+    }
     location /public {
         alias $$HOME$$/public/;
         add_header Pragma public;
