--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -9,6 +9,7 @@
     }
     location /grafana {
         include proxy_params;
+        proxy_set_header Authorization "";
         proxy_pass http://172.16.5.25:8083/;
     }
     location /public {
