fixes grafana error

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -7,7 +7,7 @@
         include proxy_params;
         proxy_pass http://172.16.0.16;
     }
-    location /grafana {
+    location /grafana/ {
         include proxy_params;
         proxy_set_header Authorization "";
         proxy_pass http://172.16.5.25:8083/;
