--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
+    "angular-animate": "~1.4.7",
     "angular-bootstrap": "~0.13.3",
     "angular-filter": "~0.5.5",
     "angular-loading-bar": "~0.8.0",
