--- a/public/bower.json
+++ b/public/bower.json
@@ -28,6 +28,7 @@
     "angular-sanitize": "~1.4.5",
     "angular-tablesort": "~1.1.0",
     "bootstrap": "~3.3.4",
+    "isteven-angular-multiselect": "angular-multi-select#~4.0.0",
     "json-formatter": "~0.4.0",
     "underscore": "~1.8.3"
   }
