build client js with gulp

--- a/public/Makefile
+++ b/public/Makefile
@@ -1,18 +1,25 @@
 COFFEE=../node_modules/coffee-script/bin/coffee
 JADE=../node_modules/jade/bin/jade.js
 BOWER=../node_modules/bower/bin/bower
+GULP=../node_modules/gulp/bin/gulp.js
 
-TARGETS=$(patsubst %.coffee,%.js,$(shell find . -name \*.coffee))
-TARGETS+=$(patsubst %.jade,%.html,$(shell find . -name \*.jade))
+SCRIPTS=$(shell find . -name \*.coffee)
+TEMPLATES=$(patsubst %.jade,%.html,$(shell find . -name \*.jade))
 
-all: bower_components $(TARGETS)
+all: bower_components app.js $(TEMPLATES)
+
+app.js: $(TARGETS) gulpfile.coffee
+	$(GULP) app.js
 
 bower_components: bower.json
 	$(BOWER) install --verbose --allow-root
 	touch bower_components
 
 clean:
-	rm -rf $(TARGETS)
+	rm -rf $(TEMPLATES) app.js
+
+dist-clean: clean
+	rm -rf bower_components
 
 %.html: %.jade
 	$(JADE) --pretty $<
