--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "dependencies": {
     "bower": "^1.5.3",
     "coffee-script": "^1.9.3",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
     "jade": "^1.11.0",
     "koa": "^1.0.0",
     "koa-body": "^1.3.0",
